@startuml

title __BUILDER's Class Diagram__\n



        interface builder.Builder {
            {abstract} + Build()
            {abstract} + lineBounds()
            {abstract} + makeCircle()
            {abstract} + textgen()
        }


  


        class builder.BuilderIndicatorMini {
            ~ pane : Pane
            + Build()
            + lineBounds()
            + makeCircle()
            + remove()
            + textgen()
        }


  



        class builder.Director {
            + Initialize()
        }





        class builder.Indicator {
            - panel : Pane
            + add()
            + remove()
            + show()
        }



  builder.BuilderIndicatorMini .up.|> builder.Builder
  builder.BuilderIndicatorMini o-- builder.Indicator : indicator
  builder.Director o-- builder.BuilderIndicatorMini : builder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
